--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase-tools": "^13.8.2",
     "inquirer-autocomplete-prompt": "^3.0.1",
     "ng-apexcharts": "^1.10.0",
+    "ngx-skeleton-loader": "^9.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
