--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.7",
+    "algoliasearch": "^4.24.0",
     "angular-svg-icon": "^17.0.0",
     "apexcharts": "^3.49.0",
     "express": "^4.18.2",
+    "firebase": "^10.13.0",
     "firebase-tools": "^13.8.2",
     "inquirer-autocomplete-prompt": "^3.0.1",
     "ng-apexcharts": "^1.10.0",
