--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "firebase": "^10.13.0",
     "firebase-tools": "^13.8.2",
+    "hammerjs": "^2.0.8",
     "inquirer-autocomplete-prompt": "^3.0.1",
     "ng-apexcharts": "^1.10.0",
     "ngx-skeleton-loader": "^9.0.0",
@@ -43,6 +44,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@types/express": "^4.17.17",
+    "@types/hammerjs": "^2.0.45",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.19",
