--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:boite-a-ref": "node dist/boite-a-ref/server/server.mjs",
-    "serve:ssr": "node dist/boite-a-ref/server/main.js",
-    "build:ssr": "ng build && ng run boite-a-ref:server",
+    "dev:ssr": "ng run test:serve-ssr",
+    "serve:ssr": "node dist/test/server/main.js",
+    "build:ssr": "ng build && ng run test:server",
+    "prerender": "ng run test:prerender",
     "vercel-build": "npm run build:ssr"
   },
   "private": true,
@@ -57,7 +59,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ngx-sitemap": "^1.0.0",
     "postcss": "^8.4.38",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.3",
