--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:boite-a-ref": "node dist/boite-a-ref/server/server.mjs"
+    "serve:ssr:boite-a-ref": "node dist/boite-a-ref/server/server.mjs",
+    "vercel-build": "ng build && npm run serve:ssr:boite-a-ref"
   },
   "private": true,
   "dependencies": {
