--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "algoliasearch": "^4.24.0",
     "angular-svg-icon": "^17.0.0",
     "apexcharts": "^3.49.0",
+    "axios": "^1.7.7",
     "express": "^4.18.2",
     "firebase": "^10.13.0",
+    "firebase-admin": "^12.6.0",
     "firebase-tools": "^13.8.2",
     "hammerjs": "^2.0.8",
     "inquirer-autocomplete-prompt": "^3.0.1",
@@ -57,6 +59,7 @@
     "postcss": "^8.4.38",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.3",
+    "ts-node": "^10.9.2",
     "typescript": "~5.4.2"
   }
 }
